# amazon-q-developer-cli

./: .gitmodules  Cargo.toml  DOGFOOD_ANALYSIS_SUMMARY.md  EMOJI_TOPOLOGY_INTEGRATION.md  FINAL_ARCHITECTURE_SUMMARY.md  NEURAL_LAMBDA_FUSION_ACHIEVEMENT.md  PYTHON_TO_RUST_CONVERSION_COMPLETE.md  SIMPLIFIED_ARCHITECTURE.md  SOLFUNMEME_Q_INTEGRATION.md  UNIFIED_KNOWLEDGE_SYSTEM.md  dogfood-analysis-report.md  dogfood-analysis.rs  emoji-topology-analysis-report.md  emoji-topology-demo.rs  emoji_report_generator.rs  log1.md  log2.md  neural-lambda-demo.rs  qa_integration_plan.md  qa_review_report.md  quiz_session_8b038cdb-18e5-487b-8512-1cf40d131ef1.json  solfunmeme-q-demo.rs  solfunmeme-q-simple-demo.rs  universe_init.rs
crates/candle-lambda-fusion/: Cargo.toml
crates/candle-lambda-fusion/src/: neural_emoji_map.rs
crates/chat-cli/src/api_client/: gemini_client.rs  mod.rs  send_message_output.rs
crates/emoji-topology-analyzer/: Cargo.toml
crates/emoji-topology-analyzer/src/: lib.rs
crates/log-processor/: Cargo.toml
crates/semantic-search-client/: Cargo.toml
crates/solfunmeme-analyzer/: Cargo.toml
crates/solfunmeme-analyzer/src/: cli_integration.rs  code_parser.rs  dataset_generator.rs  lib.rs  neural_synthesizer.rs  semantic_extractor.rs  sexpr_tracer.rs  vector_embedder.rs
crates/unified-knowledge/: Cargo.toml
crates/unified-knowledge/src/: interactive_quiz.rs  lib.rs
crates/unified-knowledge/src/git/: mod.rs
log_sections/: cargo_operations.json  code_snippets.json  emoji_analysis.json  error_handling.json  file_operations.json  git_operations.json  metadata.json  processing_summary.json  quality_report.json  results_summaries.json  technical_discussions.json
neural-lambda-workspace/: Cargo.toml
neural-lambda-workspace/crates/candle-lambda-fusion/: Cargo.toml  README.md
neural-lambda-workspace/crates/candle-lambda-fusion/examples/: neural_burning_demo.rs
neural-lambda-workspace/crates/candle-lambda-fusion/src/: lib.rs  neural_composer.rs  tensor_executor.rs
neural-lambda-workspace/crates/emoji-semantics/: Cargo.toml
neural-lambda-workspace/crates/emoji-semantics/src/: lib.rs
neural-lambda-workspace/crates/lambda-calculus-core/: Cargo.toml
neural-lambda-workspace/crates/lambda-calculus-core/src/: lib.rs
neural-lambda-workspace/crates/minimal-runtime-server/: Cargo.toml
neural-lambda-workspace/crates/minimal-runtime-server/src/: lib.rs
neural-lambda-workspace/crates/stanza-universe/: Cargo.toml
neural-lambda-workspace/crates/stanza-universe/src/: lib.rs
src/: log_processor.rs
