[package]
name = "emoji-topology-analyzer"
version = "0.1.0"
edition = "2021"
description = "Advanced emoji topology analysis using S-combinators and mathematical formalization"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-segmentation = "1.10"
regex = "1.10"

[dependencies.solfunmeme-analyzer]
path = "../solfunmeme-analyzer"
