[package]
name = "solfunmeme-analyzer"
version = "1.13.2"
edition = "2021"
description = "Advanced code analysis using SOLFUNMEME techniques for Amazon Q Developer CLI"
authors.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
# Core analysis
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

# File system and parsing
walkdir = { workspace = true }
glob = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }

# Data processing
rayon = { workspace = true }
crossbeam-utils = { workspace = true }
memmap2 = "0.9"

# Vector embeddings
candle-core = "0.6"
candle-nn = "0.6"

# Existing Q dependencies
semantic_search_client = { workspace = true }

[features]
default = ["cpu-only"]
gpu = ["candle-core/cuda"]
cpu-only = []
