[package]
name = "unified-knowledge"
version = "0.1.0"
edition = "2021"
authors = ["Amazon Q CLI Team"]
description = "Unified knowledge processing system integrating ragit, HuggingFace datasets, emoji analysis, and dynamic RL feedback"

[[bin]]
name = "unified-knowledge"
path = "src/bin/unified_knowledge.rs"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"

# Git operations
git2 = "0.18"

# Data processing
regex = "1.10"

# Collections and utilities
indexmap = "2.0"
dashmap = "6.0"
rayon = "1.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.0"
