[package]
name = "candle-lambda-fusion"
version = "0.1.0"
edition = "2021"
description = "Neural network composition through emoji-encoded lambda calculus with Candle operations"

[dependencies]
candle-core = "0.6"
candle-nn = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[dependencies.lambda-calculus-core]
path = "../lambda-calculus-core"

[dependencies.emoji-semantics]
path = "../emoji-semantics"

[features]
default = ["cpu-only"]
gpu = ["candle-core/cuda"]
cpu-only = []
